# secure-auth-system

./: .env  .gitignore  CreateAccount.html  Details.html  ForgotPassword.html  LICENSE  Login.html  README.md  SignIn.html  User-Kyle’s MacBook Pro-2.html  User-Kyle’s MacBook Pro.html  User.html  Zapier_Testing.py  database.py  email_sender.py  jwt_demo.py  password.py  password_2.py  pyproject.toml  salt.py  server.py  style_createAccount.css  style_details.css  style_forgotPassword.css  style_login.css  user2.html  users.db  users.json
Playground/: argon2_demo.py  email_sender.py  password_generator.py
src/secure_auth_system/: __init__.py
